--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: First Jekyll Blog
 description: This is a blog to learn Jekyll
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: images/jekyll-logo.png
 
 #
 # Flags below are optional
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: linuxntwrkng/linuxntwrkng.github.io
+  github: linuxntwrkng
   instagram:
   linkedin:
   pinterest:
