--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: First Jekyll Blog
 description: This is a blog to learn Jekyll
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/jekyll-logo.png
+avatar: https://linuxntwrkng.github.io/images/jekyll-logo.png
 
 #
 # Flags below are optional
